@@ -5,9 +5,10 @@ import java.time.ZoneOffset;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+
 import uk.gov.companieshouse.api.testdata.exception.DataException;
 import uk.gov.companieshouse.api.testdata.model.entity.Basket;
 import uk.gov.companieshouse.api.testdata.model.entity.Capital;
@@ -24,27 +25,29 @@ import uk.gov.companieshouse.api.testdata.model.rest.FilingHistoryDocumentsSpec;
 import uk.gov.companieshouse.api.testdata.model.rest.ItemOptionsSpec;
 import uk.gov.companieshouse.api.testdata.repository.BasketRepository;
 import uk.gov.companieshouse.api.testdata.repository.CertifiedCopiesRepository;
-import uk.gov.companieshouse.api.testdata.service.AddressService;
 import uk.gov.companieshouse.api.testdata.service.DataService;
 import uk.gov.companieshouse.api.testdata.service.RandomService;
 
 @Service
 public class CertifiedCopiesServiceImpl implements DataService<CertificatesData, CertifiedCopiesSpec> {
 
-    @Autowired
-    public CertifiedCopiesRepository certifiedCopiesRepository;
+    private final CertifiedCopiesRepository certifiedCopiesRepository;
+
+    private final BasketRepository basketRepository;
+
+    private final RandomService randomService;
+
+    private final CertificatesServiceImpl certificatesService;
 
     @Autowired
-    public BasketRepository basketRepository;
-
-    @Autowired
-    public AddressService addressService;
-
-    @Autowired
-    public RandomService randomService;
-
-    @Autowired
-    private CertificatesServiceImpl certificatesService;
+    public CertifiedCopiesServiceImpl(CertifiedCopiesRepository certifiedCopiesRepository, BasketRepository basketRepository, 
+            RandomService randomService, CertificatesServiceImpl certificatesService) {
+        super();
+        this.certifiedCopiesRepository = certifiedCopiesRepository;
+        this.basketRepository = basketRepository;
+        this.randomService = randomService;
+        this.certificatesService = certificatesService;
+    }
 
     @Override
     public CertificatesData create(CertifiedCopiesSpec spec) throws DataException {
@@ -92,7 +95,7 @@ public class CertifiedCopiesServiceImpl implements DataService<CertificatesData,
                     capital.setFigure(c.getFigure());
                     return capital;
                 })
-                .collect(Collectors.toList());
+                .toList();
             filingHistoryDescriptionValues.setCapital(capitalList);
         }
 
@@ -157,7 +160,7 @@ public class CertifiedCopiesServiceImpl implements DataService<CertificatesData,
                         itemCosts.setProductType(itemCostsSpec.getProductType());
                         return itemCosts;
                     })
-                    .collect(Collectors.toList());
+                    .toList();
             certifiedCopies.setItemCosts(itemCostsList);
         }
         certifiedCopies.setItemOptions(itemOptions);
